# U3_unal_proyecto

./: .gitignore  README.md  marco_proyecto.txt  pyproject.toml
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploy.py  deploy.sh  deploymentdoc.md  setup_server.py
scripts/data_acquisition/: load_data.py  main.py
scripts/eda/: bow.py  eda.ipynb
scripts/evaluation/: Model_final_report.py
scripts/preprocessing/: main.py  preprocess_df.py  preprocess_text.py
scripts/training/: Model.py  Model_report.py  load.py  train_bert.py  train_mlp.py  train_rf.py
src/models/: .gitignore  bert_model.keras.dvc  mlp_model.joblib.dvc  rf_model.joblib.dvc
src/txt_comments/: .gitignore  jigsaw_data.zip.dvc  jigsaw_data_prep.parquet.dvc  jigsaw_data_prep_sampled.parquet.dvc
